Functions parse() and load_from_pickle() added. parse() - Parse text values in dataframe with spacy, create doc object in new column. - Save to pickle. Commented out print statements to view progress.
load_from_pickle()
- Does what the name implies - loads to dataframe

--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -390,190 +390,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "93cf658f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>text</th>\n",
-       "      <th>title</th>\n",
-       "      <th>author</th>\n",
-       "      <th>year</th>\n",
-       "      <th>fks</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>\\nCHAPTER 1\\n\\nThe family of Dashwood had long...</td>\n",
-       "      <td>Sense_and_Sensibility</td>\n",
-       "      <td>Austen</td>\n",
-       "      <td>1811</td>\n",
-       "      <td>10.8901</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>'Wooed and married and a'.'\\n'Edith!' said Mar...</td>\n",
-       "      <td>North_and_South</td>\n",
-       "      <td>Gaskell</td>\n",
-       "      <td>1855</td>\n",
-       "      <td>6.6582</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Book the First--Recalled to Life\\n\\n\\n\\n\\nI. T...</td>\n",
-       "      <td>A_Tale_of_Two_Cities</td>\n",
-       "      <td>Dickens</td>\n",
-       "      <td>1858</td>\n",
-       "      <td>9.8544</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>SAMUEL BUTLER.\\nAugust 7, 1901\\n\\nCHAPTER I: W...</td>\n",
-       "      <td>Erewhon</td>\n",
-       "      <td>Butler</td>\n",
-       "      <td>1872</td>\n",
-       "      <td>14.6960</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>THE AMERICAN\\n\\nby Henry James\\n\\n\\n1877\\n\\n\\n...</td>\n",
-       "      <td>The_American</td>\n",
-       "      <td>James</td>\n",
-       "      <td>1877</td>\n",
-       "      <td>8.0944</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>\\nThe Picture of Dorian Gray\\n\\nby\\n\\nOscar Wi...</td>\n",
-       "      <td>Dorian_Gray</td>\n",
-       "      <td>Wilde</td>\n",
-       "      <td>1890</td>\n",
-       "      <td>4.9591</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Phase the First: The Maiden\\n\\n\\nI\\n\\n\\nOn an ...</td>\n",
-       "      <td>Tess_of_the_DUrbervilles</td>\n",
-       "      <td>Hardy</td>\n",
-       "      <td>1891</td>\n",
-       "      <td>7.6502</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>BOOK FIRST: THE PRINCE\\n\\n\\n\\n\\nPART FIRST\\n\\n...</td>\n",
-       "      <td>The_Golden_Bowl</td>\n",
-       "      <td>James</td>\n",
-       "      <td>1904</td>\n",
-       "      <td>12.4345</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>THE SECRET GARDEN\\n\\nBY FRANCES HODGSON BURNET...</td>\n",
-       "      <td>The_Secret_Garden</td>\n",
-       "      <td>Burnett</td>\n",
-       "      <td>1911</td>\n",
-       "      <td>4.6554</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Chapter 1\\n\\nOnce upon a time and a very good ...</td>\n",
-       "      <td>Portrait_of_the_Artist</td>\n",
-       "      <td>Joyce</td>\n",
-       "      <td>1916</td>\n",
-       "      <td>6.4773</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>\\nTHE BLACK MOTH\\n\\nA ROMANCE OF THE XVIII CEN...</td>\n",
-       "      <td>The_Black_Moth</td>\n",
-       "      <td>Heyer</td>\n",
-       "      <td>1926</td>\n",
-       "      <td>4.2303</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>ORLANDO\\n\\nA BIOGRAPHY\\n\\nBY\\n\\nVIRGINIA WOOLF...</td>\n",
-       "      <td>Orlando</td>\n",
-       "      <td>Woolf</td>\n",
-       "      <td>1928</td>\n",
-       "      <td>9.5710</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Your ideas are terrifying and your hearts are ...</td>\n",
-       "      <td>Blood_Meridian</td>\n",
-       "      <td>McCarthy</td>\n",
-       "      <td>1930</td>\n",
-       "      <td>5.6336</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                 text  \\\n",
-       "0   \\nCHAPTER 1\\n\\nThe family of Dashwood had long...   \n",
-       "1   'Wooed and married and a'.'\\n'Edith!' said Mar...   \n",
-       "2   Book the First--Recalled to Life\\n\\n\\n\\n\\nI. T...   \n",
-       "3   SAMUEL BUTLER.\\nAugust 7, 1901\\n\\nCHAPTER I: W...   \n",
-       "4   THE AMERICAN\\n\\nby Henry James\\n\\n\\n1877\\n\\n\\n...   \n",
-       "5   \\nThe Picture of Dorian Gray\\n\\nby\\n\\nOscar Wi...   \n",
-       "6   Phase the First: The Maiden\\n\\n\\nI\\n\\n\\nOn an ...   \n",
-       "7   BOOK FIRST: THE PRINCE\\n\\n\\n\\n\\nPART FIRST\\n\\n...   \n",
-       "8   THE SECRET GARDEN\\n\\nBY FRANCES HODGSON BURNET...   \n",
-       "9   Chapter 1\\n\\nOnce upon a time and a very good ...   \n",
-       "10  \\nTHE BLACK MOTH\\n\\nA ROMANCE OF THE XVIII CEN...   \n",
-       "11  ORLANDO\\n\\nA BIOGRAPHY\\n\\nBY\\n\\nVIRGINIA WOOLF...   \n",
-       "12  Your ideas are terrifying and your hearts are ...   \n",
-       "\n",
-       "                       title    author  year      fks  \n",
-       "0      Sense_and_Sensibility    Austen  1811  10.8901  \n",
-       "1            North_and_South   Gaskell  1855   6.6582  \n",
-       "2       A_Tale_of_Two_Cities   Dickens  1858   9.8544  \n",
-       "3                    Erewhon    Butler  1872  14.6960  \n",
-       "4               The_American     James  1877   8.0944  \n",
-       "5                Dorian_Gray     Wilde  1890   4.9591  \n",
-       "6   Tess_of_the_DUrbervilles     Hardy  1891   7.6502  \n",
-       "7            The_Golden_Bowl     James  1904  12.4345  \n",
-       "8          The_Secret_Garden   Burnett  1911   4.6554  \n",
-       "9     Portrait_of_the_Artist     Joyce  1916   6.4773  \n",
-       "10            The_Black_Moth     Heyer  1926   4.2303  \n",
-       "11                   Orlando     Woolf  1928   9.5710  \n",
-       "12            Blood_Meridian  McCarthy  1930   5.6336  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "3762e657",
    "metadata": {},
@@ -587,7 +403,7 @@
    "id": "4a5f6997",
    "metadata": {},
    "source": [
-    "## e) parse: WIP\n",
+    "## e) parse\n",
     "The goal of this function is to process the texts with spaCy’s tokenizer and parser, and store the processed texts. Your completed function should: \n",
     "- i. Use the spaCy nlp method to add a new column to the dataframe that contains parsed and tokenized Doc objects for each text. \n",
     "- ii. Serialise the resulting dataframe (i.e., write it out to disk) using the pickle format. \n",
@@ -605,24 +421,26 @@
     "\n",
     "def parse(df, store_path=Path.cwd() / \"pickles\", out_name=\"parsed.pickle\"):\n",
     "    \"\"\"Parses the text of a DataFrame using spaCy, stores the parsed docs as a column and writes the resulting  DataFrame to a pickle file\"\"\"\n",
-    "    df['docs'] = [nlp(line) for line in df['text']] # create spacy docs for each cell \"text\"\n",
-    "    df.to_pickle(os.path.join(store_path,out_name)) # write to pickle\n",
-    "    return df\n",
+    "    docs = {}\n",
+    "    for i in range(len(df)):\n",
+    "        docs[i] = nlp(df['text'][i]) # create spacy docs for each cell \"text\"\n",
+    "        # print(f\"Document {i+1} / {len(df)} parsed.\") #? added to see process when parsing (takes a while)\n",
+    "    df['docs'] = docs.values()\n",
+    "    df.to_pickle(os.path.join(store_path,out_name)) #~ write to pickle\n",
+    "    # return df #^ To check the returned df\n",
     "    \n",
     "def load_from_pickle(store_path=Path.cwd() / \"pickles\", out_name=\"parsed.pickle\"):\n",
     "    df = pd.read_pickle(os.path.join(store_path, out_name))\n",
     "    return df\n",
     "\n",
-    "#! NOT TESTED"
+    "# df = parse(df) #^ To check the returned df with spacy doc objects\n",
+    "\n",
+    "''' Load from pickle '''\n",
+    "df = load_from_pickle() \n",
+    "\n",
+    "#? To check the returned type\n",
+    "# type(df['docs'][0]) # ~spacy.tokens.doc.Doc "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2208444b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
