1) f, i) - functions extract_top_n_pos() and print_title_top_pos()
Use tokenised text to extract pos type, count number in document.
Print title top n=10

Options added for parameters to ignore punctuation, and view the pos with count, or just list of pos.

--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b9ed11f3",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e8c1eb6e",
    "metadata": {},
    "outputs": [],
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7ad318b6",
    "metadata": {},
    "outputs": [],
@@ -457,6 +457,104 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "db45c65e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sense_and_Sensibility: [('PRON', 18596), ('NOUN', 17361), ('VERB', 14896), ('ADP', 14146), ('AUX', 10153), ('DET', 9076), ('ADV', 8282), ('ADJ', 7880), ('PROPN', 5847), ('CCONJ', 4753)]\n",
+      "North_and_South: [('PRON', 28772), ('NOUN', 28271), ('VERB', 25921), ('ADP', 20353), ('AUX', 14662), ('DET', 14013), ('ADJ', 12385), ('ADV', 11246), ('PROPN', 8897), ('CCONJ', 7741)]\n",
+      "A_Tale_of_Two_Cities: [('NOUN', 23904), ('PRON', 18912), ('VERB', 17859), ('ADP', 17102), ('DET', 13761), ('SPACE', 12289), ('ADJ', 9264), ('AUX', 8885), ('ADV', 7316), ('PROPN', 6173)]\n",
+      "Erewhon: [('NOUN', 13715), ('PRON', 11292), ('VERB', 10127), ('ADP', 9573), ('DET', 7923), ('AUX', 7020), ('ADJ', 5995), ('ADV', 5343), ('CCONJ', 3913), ('SCONJ', 3355)]\n",
+      "The_American: [('PRON', 24225), ('VERB', 20253), ('NOUN', 19413), ('ADP', 13555), ('SPACE', 11755), ('DET', 10650), ('AUX', 10418), ('ADJ', 9554), ('ADV', 7830), ('PROPN', 6938)]\n",
+      "Dorian_Gray: [('PRON', 13483), ('NOUN', 12681), ('SPACE', 11301), ('VERB', 11241), ('ADP', 8663), ('DET', 6726), ('AUX', 6378), ('ADJ', 5676), ('ADV', 4226), ('PROPN', 3370)]\n",
+      "Tess_of_the_DUrbervilles: [('NOUN', 26509), ('PRON', 21782), ('VERB', 19803), ('ADP', 18141), ('SPACE', 18138), ('DET', 14510), ('AUX', 10840), ('ADJ', 10062), ('ADV', 9253), ('CCONJ', 5789)]\n",
+      "The_Golden_Bowl: [('PRON', 36547), ('NOUN', 29859), ('VERB', 27323), ('ADP', 26821), ('SPACE', 17676), ('DET', 16980), ('ADV', 16951), ('AUX', 16288), ('ADJ', 13645), ('SCONJ', 7397)]\n",
+      "The_Secret_Garden: [('PRON', 13955), ('VERB', 13161), ('NOUN', 11461), ('SPACE', 10020), ('ADP', 7427), ('AUX', 6631), ('DET', 5856), ('ADJ', 5231), ('ADV', 5168), ('CCONJ', 3939)]\n",
+      "Portrait_of_the_Artist: [('NOUN', 16794), ('VERB', 11134), ('ADP', 10916), ('PRON', 10587), ('DET', 9164), ('ADJ', 5983), ('AUX', 4798), ('CCONJ', 4117), ('PROPN', 3895), ('ADV', 3756)]\n",
+      "The_Black_Moth: [('PRON', 16929), ('VERB', 15116), ('NOUN', 13573), ('SPACE', 9449), ('ADP', 8766), ('AUX', 6718), ('DET', 6432), ('ADV', 6317), ('PROPN', 5756), ('ADJ', 5350)]\n",
+      "Orlando: [('NOUN', 15664), ('VERB', 10142), ('ADP', 9513), ('PRON', 9491), ('DET', 8714), ('SPACE', 6393), ('ADJ', 5171), ('AUX', 4937), ('ADV', 4525), ('CCONJ', 3851)]\n",
+      "Blood_Meridian: [('NOUN', 24945), ('VERB', 17440), ('ADP', 16236), ('DET', 15623), ('PRON', 13470), ('SPACE', 8781), ('CCONJ', 7372), ('ADJ', 6136), ('AUX', 4581), ('ADV', 4268)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter \n",
+    "\n",
+    "def extract_top_n_pos(doc, n, output_type, with_punct):\n",
+    "    if with_punct:\n",
+    "        pos_counts = Counter([token.pos_ for token in doc])\n",
+    "    else: # * without punctuation\n",
+    "        pos_counts = Counter([token.pos_ for token in doc if token.pos_ != 'PUNCT'])\n",
+    "    if output_type == 'list':\n",
+    "        return [pos for pos, count in pos_counts.most_common()][:n]\n",
+    "    elif output_type == 'pairs':\n",
+    "        return pos_counts.most_common()[:n]\n",
+    "\n",
+    "def print_title_top_pos(df, n=10, output_type = 'list', with_punct=True):\n",
+    "    top_dict = dict()\n",
+    "    for i in range(len(df)):\n",
+    "        n_pos = extract_top_n_pos(df['docs'][i], n, output_type, with_punct)\n",
+    "        top_dict[df['title'][i]] = n_pos\n",
+    "    for key, value in top_dict.items():\n",
+    "        print(f\"{key}: {value}\")\n",
+    "    \n",
+    "# print_title_top_pos(df) # * default - title: list of top POS (including punctuation)\n",
+    "print_title_top_pos(df, output_type='pairs', with_punct=False) # * call to show POS type and count value (tuples), excluding punctuation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fddde515",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p_counts = Counter([token.pos_ for token in d])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "e10de6c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('PUNCT', 36518),\n",
+       " ('PRON', 28772),\n",
+       " ('NOUN', 28271),\n",
+       " ('VERB', 25921),\n",
+       " ('ADP', 20353),\n",
+       " ('AUX', 14662),\n",
+       " ('DET', 14013),\n",
+       " ('ADJ', 12385),\n",
+       " ('ADV', 11246),\n",
+       " ('PROPN', 8897),\n",
+       " ('CCONJ', 7741),\n",
+       " ('PART', 6926),\n",
+       " ('SCONJ', 5721),\n",
+       " ('SPACE', 3317),\n",
+       " ('NUM', 977),\n",
+       " ('INTJ', 829),\n",
+       " ('X', 70)]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_counts.most_common()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "884d607e",
    "metadata": {},
    "outputs": [],
@@ -473,12 +571,20 @@
     "def subjects_by_verb_pmi(doc, target_verb):\n",
     "    \"\"\"Extracts the most common subjects of a given verb in a parsed document. Returns a list.\"\"\"\n",
     "    pass\n",
+    "    for i, row in df.iterrows():\n",
+    "        print(row[\"title\"])\n",
+    "        print(subjects_by_verb_pmi(row[\"parsed\"], \"hear\"))\n",
+    "        print(\"\\n\")\n",
     "\n",
     "\n",
     "\n",
     "def subjects_by_verb_count(doc, verb):\n",
     "    \"\"\"Extracts the most common subjects of a given verb in a parsed document. Returns a list.\"\"\"\n",
     "    pass\n",
+    "    for i, row in df.iterrows():\n",
+    "        print(row[\"title\"])\n",
+    "        print(subjects_by_verb_count(row[\"parsed\"], \"hear\"))\n",
+    "        print(\"\\n\")\n",
     "\n",
     "\n",
     "\n",
