Some cleaning up

--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -448,10 +448,15 @@
    "metadata": {},
    "source": [
     "## f) Working with parses: **todo**\n",
-    "the final lines of the code template contain three `for` loops. Write the functions needed to complete these loops so that they print: \n",
-    "- i. The title of each novel and a list of the ten most common syntactic objects overall in the text. \n",
-    "- ii. The title of each novel and a list of the ten most common syntactic subjects of the verb ‘to hear’ (in any tense) in the text, ordered by their frequency. \n",
-    "- iii. The title of each novel and a list of the ten most common syntactic subjects of the verb ‘to hear’ (in any tense) in the text, ordered by their Pointwise Mutual Information."
+    "the final lines of the code template contain three `for` loops. Write the functions needed to complete these loops so that they print: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af19bb02",
+   "metadata": {},
+   "source": [
+    "### i. The title of each novel and a list of the ten most common syntactic objects overall in the text. "
    ]
   },
   {
@@ -506,50 +511,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fddde515",
+   "cell_type": "markdown",
+   "id": "257f8de6",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "p_counts = Counter([token.pos_ for token in d])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "e10de6c0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('PUNCT', 36518),\n",
-       " ('PRON', 28772),\n",
-       " ('NOUN', 28271),\n",
-       " ('VERB', 25921),\n",
-       " ('ADP', 20353),\n",
-       " ('AUX', 14662),\n",
-       " ('DET', 14013),\n",
-       " ('ADJ', 12385),\n",
-       " ('ADV', 11246),\n",
-       " ('PROPN', 8897),\n",
-       " ('CCONJ', 7741),\n",
-       " ('PART', 6926),\n",
-       " ('SCONJ', 5721),\n",
-       " ('SPACE', 3317),\n",
-       " ('NUM', 977),\n",
-       " ('INTJ', 829),\n",
-       " ('X', 70)]"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "p_counts.most_common()"
+    "- ii. The title of each novel and a list of the ten most common syntactic subjects of the verb ‘to hear’ (in any tense) in the text, ordered by their frequency. \n",
+    "- iii. The title of each novel and a list of the ten most common syntactic subjects of the verb ‘to hear’ (in any tense) in the text, ordered by their Pointwise Mutual Information."
    ]
   },
   {
