The adjective_counts() function. While the question doesn't state adjective_counts, rather "most common syntactic objects overall", this is called in main(). However, the call in main is using the dataframe, whereas the function and docstring calls for a `doc` object?
Adding adjective_counts anyway.

--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -511,6 +511,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "884d607e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('old', 253),\n",
+       " ('small', 153),\n",
+       " ('other', 153),\n",
+       " ('dead', 129),\n",
+       " ('little', 127),\n",
+       " ('dark', 120),\n",
+       " ('naked', 91),\n",
+       " ('great', 89),\n",
+       " ('black', 86),\n",
+       " ('more', 77)]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "def adjective_counts(doc, n=10):\n",
+    "    \"\"\"Extracts the most common adjectives in a parsed document. Returns a list of tuples.\"\"\"\n",
+    "    pos_counts = Counter([token.text for token in doc if token.pos_ == 'ADJ'])\n",
+    "    return pos_counts.most_common()[:n]\n",
+    "    \n",
+    "# doc = df['docs'][len(df)-1] #*to test function with a sample doc\n",
+    "adjective_counts(doc)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "257f8de6",
    "metadata": {},
@@ -522,15 +560,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "884d607e",
+   "id": "b7526e1d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "def adjective_counts(doc):\n",
-    "    \"\"\"Extracts the most common adjectives in a parsed document. Returns a list of tuples.\"\"\"\n",
-    "    pass\n",
     "\n",
     "\n",
     "\n",
@@ -548,12 +581,10 @@
     "def subjects_by_verb_count(doc, verb):\n",
     "    \"\"\"Extracts the most common subjects of a given verb in a parsed document. Returns a list.\"\"\"\n",
     "    pass\n",
-    "    for i, row in df.iterrows():\n",
-    "        print(row[\"title\"])\n",
-    "        print(subjects_by_verb_count(row[\"parsed\"], \"hear\"))\n",
-    "        print(\"\\n\")\n",
-    "\n",
-    "\n",
+    "    # for i, row in df.iterrows():\n",
+    "    #     print(row[\"title\"])\n",
+    "    #     print(subjects_by_verb_count(row[\"parsed\"], \"hear\"))\n",
+    "    #     print(\"\\n\")\n",
     "\n",
     "\n",
     "\n",
@@ -590,7 +621,7 @@
     "    #print(get_ttrs(df))\n",
     "    #print(get_fks(df))\n",
     "    #df = pd.read_pickle(Path.cwd() / \"pickles\" /\"name.pickle\")\n",
-    "    # print(adjective_counts(df))\n",
+    "    # print(adjective_counts(df)) #? this is using the dataframe, the function and docstring calls for a `doc` object.\n",
     "    \"\"\" \n",
     "    for i, row in df.iterrows():\n",
     "        print(row[\"title\"])\n",
