Functions for 1)f-i Syntactic subjects of verb "to hear" find_subjects     ''' Function to find the subjects of a token - both up and down the parse tree ''' subjects_by_verb_count Returns a list of tuples: (Word, count) Added a parameter to remove multiple counts of 1 in the most frequent.  > Setting to n=10 sliced the list by order, which didn't have much meaning in the returned values  > Have opted to include the counts

--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "b9ed11f3",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e8c1eb6e",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "e1beddc4",
    "metadata": {},
    "outputs": [
@@ -174,7 +174,7 @@
        "1  Gaskell  1855  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,10 +194,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "1d77ee3b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Sense_and_Sensibility': 0.053268102430763443,\n",
+       " 'North_and_South': 0.0549040694681204,\n",
+       " 'A_Tale_of_Two_Cities': 0.07075401657114008,\n",
+       " 'Erewhon': 0.0916875393290313,\n",
+       " 'The_American': 0.06385674022547373,\n",
+       " 'Dorian_Gray': 0.08380843058478413,\n",
+       " 'Tess_of_the_DUrbervilles': 0.0778145359339165,\n",
+       " 'The_Golden_Bowl': 0.04748457874040203,\n",
+       " 'The_Secret_Garden': 0.05847231570812455,\n",
+       " 'Portrait_of_the_Artist': 0.10497297297297298,\n",
+       " 'The_Black_Moth': 0.07870315352786751,\n",
+       " 'Orlando': 0.11391744706840391,\n",
+       " 'Blood_Meridian': 0.08570454932697223}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def nltk_ttr(text):\n",
     "    \"\"\"Calculates the type-token ratio of a text. Text is tokenized using nltk.word_tokenize.\"\"\"\n",
@@ -248,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 58,
    "id": "b097f9fc",
    "metadata": {},
    "outputs": [],
@@ -339,13 +362,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "f4017d55",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "import nltk \n",
+    "import re\n",
     "def fk_level(text, d):\n",
     "    \"\"\"Returns the Flesch-Kincaid Grade Level of a text (higher grade is more difficult).\n",
     "    Requires a dictionary of syllables per word.\n",
@@ -364,7 +388,6 @@
     "    \n",
     "    sents=sent_tokenize(text.lower())\n",
     "    words=[t.lower() for t in word_tokenize(text) if t.isalpha()]\n",
-    "    temp = dict()\n",
     "    total_syllables = sum([count_syl(word, d) for word in words])\n",
     "    fkl = 0.39 * (len(words) / len(sents)) + 11.8 * (total_syllables/ len(words))- 15.59\n",
     "    # print(total_syllables, len(words), len(sents), fkl)\n",
@@ -413,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "7ad318b6",
    "metadata": {},
    "outputs": [],
@@ -461,30 +484,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "db45c65e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sense_and_Sensibility: [('PRON', 18596), ('NOUN', 17361), ('VERB', 14896), ('ADP', 14146), ('AUX', 10153), ('DET', 9076), ('ADV', 8282), ('ADJ', 7880), ('PROPN', 5847), ('CCONJ', 4753)]\n",
-      "North_and_South: [('PRON', 28772), ('NOUN', 28271), ('VERB', 25921), ('ADP', 20353), ('AUX', 14662), ('DET', 14013), ('ADJ', 12385), ('ADV', 11246), ('PROPN', 8897), ('CCONJ', 7741)]\n",
-      "A_Tale_of_Two_Cities: [('NOUN', 23904), ('PRON', 18912), ('VERB', 17859), ('ADP', 17102), ('DET', 13761), ('SPACE', 12289), ('ADJ', 9264), ('AUX', 8885), ('ADV', 7316), ('PROPN', 6173)]\n",
-      "Erewhon: [('NOUN', 13715), ('PRON', 11292), ('VERB', 10127), ('ADP', 9573), ('DET', 7923), ('AUX', 7020), ('ADJ', 5995), ('ADV', 5343), ('CCONJ', 3913), ('SCONJ', 3355)]\n",
-      "The_American: [('PRON', 24225), ('VERB', 20253), ('NOUN', 19413), ('ADP', 13555), ('SPACE', 11755), ('DET', 10650), ('AUX', 10418), ('ADJ', 9554), ('ADV', 7830), ('PROPN', 6938)]\n",
-      "Dorian_Gray: [('PRON', 13483), ('NOUN', 12681), ('SPACE', 11301), ('VERB', 11241), ('ADP', 8663), ('DET', 6726), ('AUX', 6378), ('ADJ', 5676), ('ADV', 4226), ('PROPN', 3370)]\n",
-      "Tess_of_the_DUrbervilles: [('NOUN', 26509), ('PRON', 21782), ('VERB', 19803), ('ADP', 18141), ('SPACE', 18138), ('DET', 14510), ('AUX', 10840), ('ADJ', 10062), ('ADV', 9253), ('CCONJ', 5789)]\n",
-      "The_Golden_Bowl: [('PRON', 36547), ('NOUN', 29859), ('VERB', 27323), ('ADP', 26821), ('SPACE', 17676), ('DET', 16980), ('ADV', 16951), ('AUX', 16288), ('ADJ', 13645), ('SCONJ', 7397)]\n",
-      "The_Secret_Garden: [('PRON', 13955), ('VERB', 13161), ('NOUN', 11461), ('SPACE', 10020), ('ADP', 7427), ('AUX', 6631), ('DET', 5856), ('ADJ', 5231), ('ADV', 5168), ('CCONJ', 3939)]\n",
-      "Portrait_of_the_Artist: [('NOUN', 16794), ('VERB', 11134), ('ADP', 10916), ('PRON', 10587), ('DET', 9164), ('ADJ', 5983), ('AUX', 4798), ('CCONJ', 4117), ('PROPN', 3895), ('ADV', 3756)]\n",
-      "The_Black_Moth: [('PRON', 16929), ('VERB', 15116), ('NOUN', 13573), ('SPACE', 9449), ('ADP', 8766), ('AUX', 6718), ('DET', 6432), ('ADV', 6317), ('PROPN', 5756), ('ADJ', 5350)]\n",
-      "Orlando: [('NOUN', 15664), ('VERB', 10142), ('ADP', 9513), ('PRON', 9491), ('DET', 8714), ('SPACE', 6393), ('ADJ', 5171), ('AUX', 4937), ('ADV', 4525), ('CCONJ', 3851)]\n",
-      "Blood_Meridian: [('NOUN', 24945), ('VERB', 17440), ('ADP', 16236), ('DET', 15623), ('PRON', 13470), ('SPACE', 8781), ('CCONJ', 7372), ('ADJ', 6136), ('AUX', 4581), ('ADV', 4268)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from collections import Counter \n",
     "\n",
@@ -507,12 +510,12 @@
     "        print(f\"{key}: {value}\")\n",
     "    \n",
     "# print_title_top_pos(df) # * default - title: list of top POS (including punctuation)\n",
-    "print_title_top_pos(df, output_type='pairs', with_punct=False) # * call to show POS type and count value (tuples), excluding punctuation"
+    "# print_title_top_pos(df, output_type='pairs', with_punct=False) # * call to show POS type and count value (tuples), excluding punctuation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "884d607e",
    "metadata": {},
    "outputs": [
@@ -531,7 +534,7 @@
        " ('more', 77)]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +548,7 @@
     "    return pos_counts.most_common()[:n]\n",
     "    \n",
     "# doc = df['docs'][len(df)-1] #*to test function with a sample doc\n",
-    "adjective_counts(doc)"
+    "# adjective_counts(doc)"
    ]
   },
   {
@@ -553,8 +556,125 @@
    "id": "257f8de6",
    "metadata": {},
    "source": [
-    "- ii. The title of each novel and a list of the ten most common syntactic subjects of the verb ‘to hear’ (in any tense) in the text, ordered by their frequency. \n",
-    "- iii. The title of each novel and a list of the ten most common syntactic subjects of the verb ‘to hear’ (in any tense) in the text, ordered by their Pointwise Mutual Information."
+    "### - ii. The title of each novel and a list of the ten most common syntactic subjects of the verb ‘to hear’ (in any tense) in the text, ordered by their frequency. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "905dd967",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sense_and_Sensibility\n",
+      "[('I', 28), ('you', 18), ('she', 13), ('Elinor', 6), ('he', 5), ('they', 4), ('me', 4), ('Jennings', 3)]\n",
+      "\n",
+      "\n",
+      "North_and_South\n",
+      "[('she', 43), ('I', 42), ('he', 20), ('She', 17), ('you', 14), ('they', 11), ('Margaret', 10), ('me', 5), ('we', 5), ('He', 3), ('Thornton', 3), ('who', 3), ('They', 2), ('yo', 2), ('one', 2)]\n",
+      "\n",
+      "\n",
+      "A_Tale_of_Two_Cities\n",
+      "[('I', 21), ('he', 16), ('she', 9), ('you', 8), ('You', 4), ('they', 4), ('He', 3), ('Monseigneur', 2), ('me', 2)]\n",
+      "\n",
+      "\n",
+      "Erewhon\n",
+      "[('I', 38), ('he', 3), ('they', 3), ('she', 2)]\n",
+      "\n",
+      "\n",
+      "The_American\n",
+      "[('he', 16), ('I', 13), ('you', 10), ('Newman', 5), ('she', 4), ('He', 2), ('We', 2)]\n",
+      "\n",
+      "\n",
+      "Dorian_Gray\n",
+      "[('I', 24), ('he', 11), ('He', 5), ('you', 3), ('one', 2)]\n",
+      "\n",
+      "\n",
+      "Tess_of_the_DUrbervilles\n",
+      "[('she', 28), ('I', 20), ('She', 10), ('they', 8), ('you', 7), ('he', 6), ('who', 6), ('Tess', 5), ('They', 4), ('Clare', 4), ('lady', 2), ('He', 2)]\n",
+      "\n",
+      "\n",
+      "The_Golden_Bowl\n",
+      "[('she', 13), ('you', 5), ('he', 5), ('She', 3), ('Maggie', 2), ('him', 2)]\n",
+      "\n",
+      "\n",
+      "The_Secret_Garden\n",
+      "[('I', 28), ('she', 18), ('he', 15), ('She', 7), ('you', 7), ('we', 6), ('Mary', 3), ('they', 3), ('Lennox', 2), ('Colin', 2), ('one', 2), ('Medlock', 2)]\n",
+      "\n",
+      "\n",
+      "Portrait_of_the_Artist\n",
+      "[('he', 46), ('He', 15), ('you', 10), ('I', 8), ('Stephen', 5), ('voice', 3), ('You', 2)]\n",
+      "\n",
+      "\n",
+      "The_Black_Moth\n",
+      "[('I', 37), ('you', 5), ('he', 4), ('We', 3), ('Richard', 2)]\n",
+      "\n",
+      "\n",
+      "Orlando\n",
+      "[('she', 17), ('he', 8), ('Orlando', 5), ('She', 5), ('they', 3), ('one', 3), ('I', 2)]\n",
+      "\n",
+      "\n",
+      "Blood_Meridian\n",
+      "[('he', 19), ('they', 19), ('I', 6), ('He', 6), ('you', 3), ('They', 2), ('You', 2), ('she', 2), ('who', 2), ('We', 2), ('man', 2)]\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def find_subjects(token):\n",
+    "    ''' Function to find the subjects of a token - both up and down the parse tree '''\n",
+    "    subjects = []\n",
+    "    ''' Token's parent '''\n",
+    "    if 'subj' in token.head.dep_:\n",
+    "        subjects.append(token.head)\n",
+    "    \n",
+    "    ''' Token's children '''\n",
+    "    for child in token.children:\n",
+    "        if 'subj' in child.dep_:\n",
+    "            subjects.append(child)\n",
+    "    return subjects\n",
+    "\n",
+    "def subjects_by_verb_count(doc, verb, trim_singles=True):\n",
+    "    \"\"\"Extracts the most common subjects of a given verb in a parsed document. Returns a list.\"\"\"\n",
+    "    ''' Added a parameter to remove multiple counts of 1 in the most frequent.\n",
+    "    > Setting to n=10 sliced the list by order, which didn't have much meaning in the returned values\n",
+    "    > Have opted to include the count\n",
+    "    '''\n",
+    "    subject_text = []\n",
+    "\n",
+    "    for token in doc:\n",
+    "        if token.pos_ == \"VERB\" and token.lemma_ == verb:\n",
+    "            subjects = find_subjects(token)\n",
+    "            if subjects:\n",
+    "                subject_text.extend([subject.text for subject in subjects])\n",
+    "\n",
+    "    subject_counts = Counter(subject_text)\n",
+    "    subject_counts = subject_counts.most_common()\n",
+    "    if trim_singles:\n",
+    "        return [x for x in subject_counts if x[1] >1]\n",
+    "    else:\n",
+    "        return  subject_counts\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "for i, row in df.iterrows():\n",
+    "    print(row[\"title\"])\n",
+    "    print(subjects_by_verb_count(row[\"docs\"], \"hear\"))\n",
+    "    print(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b77dbeb",
+   "metadata": {},
+   "source": [
+    "### - iii. The title of each novel and a list of the ten most common syntactic subjects of the verb ‘to hear’ (in any tense) in the text, ordered by their Pointwise Mutual Information."
    ]
   },
   {
@@ -576,15 +696,6 @@
     "        print(subjects_by_verb_pmi(row[\"parsed\"], \"hear\"))\n",
     "        print(\"\\n\")\n",
     "\n",
-    "\n",
-    "\n",
-    "def subjects_by_verb_count(doc, verb):\n",
-    "    \"\"\"Extracts the most common subjects of a given verb in a parsed document. Returns a list.\"\"\"\n",
-    "    pass\n",
-    "    # for i, row in df.iterrows():\n",
-    "    #     print(row[\"title\"])\n",
-    "    #     print(subjects_by_verb_count(row[\"parsed\"], \"hear\"))\n",
-    "    #     print(\"\\n\")\n",
     "\n",
     "\n",
     "\n",
